[package]
name = "twitter-collection-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = { version = "0.28.0", features = ["bundled"] }
futures = "0.3.25"
egg-mode = { git = "https://github.com/MatthewCash/egg-mode", rev = "00194913fbbc5b206a5c2d6db1a3313a8cf4e3b4" }
mime = "0.3.16"
tokio = { version = "1.24.1", features = ["full"] }
redis = "0.22.2"
time = { version = "0.3.17", features = ["macros"] }
reqwest = { version = "0.11.14", features = ["multipart", "json"] }
mime-sniffer = "0.1.2"
serde_json = "1.0.92"
twitter-v2 = "0.1.8"

[[bin]]
name = "app"
path = "src/main.rs"
